<resources>
    <string name="app_name">FavoriteApp</string>
    <string name="title_tab1">Favorite Movie</string>
    <string name="title_tab2">Favorite Tv Show</string>

    <!--string movie-->
    <string name="title">Movie Title</string>
    <string name="rating">Rating : </string>
    <string name="popularity">Popularity : </string>
    <string name="popularity_fill">10</string>
    <string name="release">Release Date : </string>
    <string name="favorite">Add To Favorite</string>
    <string name="date_release">Release</string>
    <string name="description">Description</string>
    <string name="detail">Detail Movie</string>
    <string name="content_description">Poster</string>


    <!--string tv show-->
    <string name="tv_show_title">Tv Show Title</string>
    <string name="tv_show_tgl">Release Date : </string>
    <string name="tv_show_genre">Genre</string>
    <string name="tv_show_year">Year</string>
    <string name="tv_show_description">Description</string>
    <string name="detail_tv">Detail TV Show</string>
    <string name="tvcontent_description">Poster</string>
</resources>
