<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tv_show"
        style="@style/CardView.Film"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="9dp">

            <ImageView
                android:id="@+id/img_tv_show"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/content_description"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:text="@string/tv_show_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tv_title_tgl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_tv_title"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="@dimen/card_margin_vertical"
                    android:text="@string/tv_show_tgl"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_tv_tgl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_tv_title"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="@dimen/card_margin_vertical"
                    android:layout_toEndOf="@id/txt_tv_title_tgl"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_tv_title_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_tv_title_tgl"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/rating"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_tv_title_tgl"
                    android:layout_marginStart="@dimen/card_margin_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/txt_tv_title_rating"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>